--- a/YLMES/Views/Home/SalesCreation.cshtml
+++ b/YLMES/Views/Home/SalesCreation.cshtml
@@ -265,7 +265,7 @@
                 });
                 $("#addC").click(function () {                
                     layer.open({
-                        content: '是否客户合同“是”继续。单击“否”公司合同。'
+                        content: '是否公司合同“是”继续。单击“否”客户合同。'
                         , btn: ['是', '否']
                         , yes: function (index, layero) {
                             window.parent.document.getElementById("rightframe").src = "/Home/ContractAdd";
