--- a/YLMES/Views/Home/Top.cshtml
+++ b/YLMES/Views/Home/Top.cshtml
@@ -30,6 +30,9 @@ $(function(){
     $('#wenjian').click(function () {
         window.parent.document.getElementById("rightframe").src = "/Home/Computer";
     });
+    $('#gai').click(function () {
+        window.parent.document.getElementById("rightframe").src = "/Discuss/ChangPwd";
+    });
     $('#weixin').click(function () {
         window.parent.document.getElementById("rightframe").src = "https://wx.qq.com/";
     });
@@ -85,6 +88,7 @@ $(function(){
         <li id="wenjian"><a target="rightFrame"><img src="../../images/icon05.png" title="文件管理" /><h2>文件管理</h2></a></li>
         <li><a href="https://wx.qq.com/" target="_blank"><img src="../../images/icon06.png" title="微信" /><h2>微信</h2></a></li>
         <li><a href="https://chuan.wellsign.cn/" target="_blank"><img src="../../images/qian.png" title="微信" /><h2>好签小程序</h2></a></li>
+        <li id="gai"><a target="rightFrame"><img src="../../images/icon02.png" title="修改信息" /><h2>修改密码</h2></a></li>
     </ul>
 
     <div class="topright">
