--- a/YLMES/Views/ProductionPlanning/PPadd.cshtml
+++ b/YLMES/Views/ProductionPlanning/PPadd.cshtml
@@ -147,7 +147,7 @@
                 </div>
             </div>        
             <div class="row cl">
-                <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>设计截至日期：</label>
+                <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>截至日期：</label>
                 <div class="formControls col-xs-8 col-sm-9">
                     <input type="text" onfocus="WdatePicker()" id="JieDate" name="JieDate" class="input-text Wdate">
                 </div>
