--- a/YLMES/Views/PurchasingManage/E_Contract.cshtml
+++ b/YLMES/Views/PurchasingManage/E_Contract.cshtml
@@ -181,7 +181,7 @@
         <h1>购销合同</h1>
         <div class="layui-form layui-form-pane" style="width:580px;">
             <div class="layui-form-item">
-                <label class="layui-form-label" style="width:200px;font-size:20px;border:0px">  甲方（供货方）：</label>
+                <label class="layui-form-label" style="width:200px;font-size:20px;border:0px">  甲方（收货方）：</label>
                 <div class="layui-input-block" style="left:-20px">
                     <select style="width:430px" class="se">
                         <option value="0" selected=selected>广东友力智能科技有限公司</option>
