--- a/YLMES/Views/SystemSettings/Process.cshtml
+++ b/YLMES/Views/SystemSettings/Process.cshtml
@@ -173,7 +173,7 @@
                             layer.msg('没有工艺流程');
                         } else {
 
-                            if (ifs == '查看流程') {
+                            if (liucheng == '查看流程') {
                                 window.parent.document.getElementById("rightframe").src = "/TaskManagement/EditingProcess?ProductName=" + data.工件编码 + "&ProductSpec=" + data.工件规格 + "&PartNumber=" + data.子件编码 + "&PartId=" + data.序号+"&ifs="+"1";
                             }
                             else {
