--- a/YLMES/Views/TaskManagement/FinishMyDesign.cshtml
+++ b/YLMES/Views/TaskManagement/FinishMyDesign.cshtml
@@ -59,6 +59,7 @@
                                 , { field: '材料', width: 150, title: '材料' }
                                 , { field: '备注', width: 100, title: '备注' }
                                 , { field: '类型', width: 100, title: '类型' }
+                                , { field: '类别', width: 100, title: '类别' }
                                 , { field: '序号', width: 100, title: '序号' }
                                 , { field: 'right', width: 100, align: 'center', toolbar: '#barDemo' }
                             ]]                       
