--- a/YLMES/Views/TaskManagement/AddProcess.cshtml
+++ b/YLMES/Views/TaskManagement/AddProcess.cshtml
@@ -19,9 +19,19 @@
 
     <script type="text/javascript">
 
-
         $(function () {
+            //$.ajax({
+            //    url: "/TaskManagement/AddQrCode",
+            //    type: "get",
+            //    data: { PartID: PartId, ParentPartID },
+            //    dataType: "json",
+            //    success: function (data) {
+            //        if (data != null) {
 
+            //        }
+
+            //    }
+            //});
             layui.use(['layer', 'form', 'laydate'], function () {
                 var form = layui.form, layer = layui.layer 
                 var laydate = layui.laydate;
@@ -285,7 +295,7 @@
             <div class="layui-inline">
                 <label class="layui-form-label">订单号</label>
                 <div class="layui-input-inline">
-                    <input type="text" class="layui-input" width="100" />
+                    <input type="text" class="layui-input" id="OrderNumber" width="100" />
                 </div>
             </div>
             <div class="layui-inline">
@@ -392,7 +402,7 @@
         </div>
         <!--endprint-->
         <button class="layui-btn layui-btn-radius layui-btn-primary che" id="save">保存</button>
-        <button class="layui-btn layui-btn-radius layui-btn-primary print" id="print" onclick="doPrint()">打印</button>
+        <button class="layui-btn layui-btn-radius layui-btn-primary print" id="print" onclick="doPrint()" style="display:none;">打印</button>
     </div>
     <style type="text/css">
         span {
