--- a/YLMES/Views/TaskManagement/CompletePurchase.cshtml
+++ b/YLMES/Views/TaskManagement/CompletePurchase.cshtml
@@ -171,7 +171,7 @@
         <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="shen">生成采购清单</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="update">编辑</a>
         {{#  } else if(d.采购订单号 != null && d.采购订单状态 == '待审核'){ }}
-        <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="que">确认全部审核通过</a>
+        <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="que">确认审核通过</a>
         {{#  } else { }}
 
         {{#  } }}
